# jesktop

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  backlog.md  justfile  plan.md  pyproject.toml
jesktop/: config.py  prompt.py  promt.py
jesktop/api/: __init__.py  auth.py  endpoints.py  views.py
jesktop/domain/: __init__.py  image.py  note.py  relationships.py
jesktop/embedders/: base.py  openai_embedder.py  voyage_embedder.py
jesktop/image_store/: __init__.py  base.py  local.py
jesktop/ingestion/: __init__.py  content_extractor.py  orchestrator.py  path_resolver.py  text_chunker.py
jesktop/ingestion/relationship_extraction/: __init__.py  analyzer.py  graph_builder.py  resolver.py
jesktop/llms/: base.py  instructor_llm_chat.py  schemas.py
jesktop/vector_dbs/: base.py  local_db.py  schemas.py
jesktop/web/templates/: base.html  index.html  login.html  note.html
scripts/: ingest.py
tests/: conftest.py  test_api.py  test_image_path_resolution.py  test_image_pattern.py  test_incremental_ingestion.py  test_integration.py  test_local_image_store.py  test_local_vector_db.py  test_path_resolver.py  test_relationships.py  test_text_chunker.py  test_wikilinks.py
tests/fakes/: __init__.py  fake_embedder.py  fake_image_store.py  fake_llm.py  fake_vector_db.py
